<resources>
    <string name="app_name">BUMI</string>
    <string name="title_home">Beranda</string>
    <string name="title_consultation">Konsultasi</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_account">Akun</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="video_title">Video Title</string>
    <string name="video_item">Training Video</string>
    <string name="home_banner_image">Image Home Banner</string>
    <string name="searchHint">Cari Judul Video</string>
    <string name="kategori_usaha">Kategori Usaha</string>
    <string name="detail_traning_video">Detail Training Video</string>
    <string name="video_description">Deskripsi</string>
    <string name="toggleFav">Video Favorit</string>
    <string name="list_training_video">List Training Video</string>
    <string name="search_button">Search Button</string>
    <string name="title_business_detail">Silahkan lengkapi data anda</string>
    <string name="jenis_usaha">Jenis usaha yang sedang dijalankan :</string>
    <string name="contoh_jenis_usaha">(cth : restoran seafood, warung sembako, makanan beku)</string>
    <string name="pilih_bidang_keahlian">Pilih bidang keahlian :</string>
    <string name="kuliner">Kuliner</string>
    <string name="rumahTangga">Rumah Tangga</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="hobi">Hobi</string>
    <string name="desc_hobi">(Jika hobi lebih dari 1, gunakan koma sebagai pemisah)</string>
    <string name="modal_usaha">Modal saat memulai usaha</string>
    <string name="usaha_mikro"><![CDATA[Usaha Mikro (<50 juta)]]></string>
    <string name="usaha_kecil">Usaha Kecil (50–500 juta)</string>
    <string name="usaha_menengah">Usaha Menengah (500 juta–10 Milyar)</string>
    <string name="title_rekom_usaha">Kami akan memilih bidang usaha yang cocok untuk anda, mohon diisi dengan data yang benar.</string>
    <string name="pengalaman_bekerja">Pengalaman bekerja :</string>
    <string name="contoh_kerja">(cth : pegawai swasta, guru, wirausaha, barista)</string>
    <string name="desc_keahlian">(Bisa pilih lebih dari satu)</string>
    <string name="modal_usaha_rekom">Modal usaha</string>
    <string name="konfirmasi_button">Konfirmasi</string>
    <string name="konfirmasi_punya_usaha">Sudah mempunyai usaha?</string>
    <string name="sudah_button">Sudah</string>
    <string name="belum_button">Belum</string>
    <string name="title_rekom_tipe_umkm">Tipe UMKM anda:</string>
    <string name="login_failed_msg">Gagal Masuk, Salah Email/Password Tidak Valid</string>
    <string name="waktu_konsul">Waktu Konsultasi</string>
    <string name="mentor">Mentor</string>
    <string name="jenis_usaha_konsul">Masukkan jenis usaha anda:</string>
    <string name="pertanyaan_untuk_trainer">Pertanyaan untuk trainer</string>
    <string name="desc_pertanyaan">(masukkan jika sudah punya pertanyaan)</string>
    <string name="greeting">Hello %1$s,</string>
    <string-array name="kategori_dropdown_array">
        <item>Pilih kategori video</item>
        <item>Kuliner</item>
        <item>Rumah Tangga</item>
        <item>Kesehatan</item>
    </string-array>
    <string-array name="mentor_dropdown_array">
        <item>Pilih mentor</item>
        <item>Puja Pramudya</item>
        <item>Ivan Nugraha</item>
        <item>Muriel Makarim</item>
    </string-array>
    <string-array name="waktu_konsul_dropdown_array">
        <item>Pilih waktu konsultasi</item>
        <item>Senin, 20 Juni 2022 jam 19.30–19.45</item>
        <item>Selasa, 21 Juni 2022 jam 17.30–17.45</item>
        <item>Selasa, 20 Juni 2022 jam 18.30–18.45</item>
    </string-array>
</resources>