<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.android.bumi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_consultation"
        android:name="com.dicoding.android.bumi.ui.consultation.ConsultationFragment"
        android:label="@string/title_consultation"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.android.bumi.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.dicoding.android.bumi.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"/>
</navigation>