<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_style">

    <TextView
        android:id="@+id/tv_konfirmasi_punya_usaha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/konfirmasi_punya_usaha"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sudah"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/poppins"
        android:text="@string/sudah_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_belum"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/poppins"
        android:text="@string/belum_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>