<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailVideoActivity">

    <ImageView
        android:id="@+id/detail_video"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/detail_traning_video"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/video_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_video" />

    <View
        android:id="@+id/separate_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/underline"
        app:layout_constraintTop_toBottomOf="@+id/toggleFav"
        tools:layout_editor_absoluteX="0dp" />

    <ToggleButton
        android:id="@+id/toggleFav"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/toggleFav"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_video" />

    <TextView
        android:id="@+id/detail_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/video_description"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/separate_line"
        app:layout_constraintTop_toBottomOf="@+id/separate_line" />

    <TextView
        android:id="@+id/detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/video_description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/detail_desc_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_desc_title" />

</androidx.constraintlayout.widget.ConstraintLayout>